log
Fri 21 Mar 2025 08:58:58 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:20: error: passing argument 2 of ‘pushFront’ makes pointer from integer without a cast [-Werror=int-conversion]
   49 |       pushFront(L, *dato);
      |                    ^~~~~
      |                    |
      |                    int
In file included from exercises.c:6:
arraylist.h:17:31: note: expected ‘void *’ but argument is of type ‘int’
   17 | void pushFront(List *L, void *dato);
      |                         ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
3f6cb15
Fri 21 Mar 2025 08:59:06 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
6b0e0fb
Fri 21 Mar 2025 09:01:27 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:21: error: expected expression before ‘int’
   47 |       int* dato = (*int) malloc(sizeof(int));
      |                     ^~~
exercises.c:47:26: error: expected ‘,’ or ‘;’ before ‘malloc’
   47 |       int* dato = (*int) malloc(sizeof(int));
      |                          ^~~~~~
Compilation failed
81b2d2c
Fri 21 Mar 2025 09:01:45 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
a6aa8eb
Fri 21 Mar 2025 09:03:07 PM UTC: 
 exercises.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  1|4
total_score: 10/70
2b59b2f
Fri 21 Mar 2025 09:07:22 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
d79e6f8
Fri 21 Mar 2025 09:08:30 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
94b1a30
